tests/fixtures/valid/for_loop/str_dict_iteration.py
# Iteration over dict with string keys
d: dict[str, int] = {"a": 1, "b": 2, "c": 3}
for k in d:
    print(k)
