tests/fixtures/invalid/round_bytes_dict.py
# Cannot call round() with Bytes, Dict[str, int]
x = round(b"hello", {"a": 1})
